<resources>
    <string name="app_name">WariWillcaGO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_reservacion">Reservacion</string>
    <string name="menu_catalogo">Catalogo</string>
    <string name="menu_recorrido">Recorrido</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_capturarqr">Capturar QR</string>
    <string name="menu_publicidad">Publicidad</string>

    <string-array name="cantidad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>