<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pe.edu.wariwillcago.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_reservacion"
        android:name="pe.edu.wariwillcago.ui.reservacion.reservacion"
        android:label="@string/menu_reservacion"
        tools:layout="@layout/fragment_reservacion" />

    <fragment
        android:id="@+id/nav_catalogo"
        android:name="pe.edu.wariwillcago.ui.catalogo.catalogo"
        android:label="@string/menu_catalogo"
        tools:layout="@layout/fragment_catalogo" />

    <fragment
        android:id="@+id/nav_recorrido"
        android:name="pe.edu.wariwillcago.ui.recorrido.recorrido"
        android:label="@string/menu_recorrido"
        tools:layout="@layout/fragment_recorrido" />

    <fragment
        android:id="@+id/nav_registro"
        android:name="pe.edu.wariwillcago.ui.registro.registro"
        android:label="@string/menu_registro"
        tools:layout="@layout/fragment_reservacion" />

    <fragment
        android:id="@+id/nav_capturaqr"
        android:name="pe.edu.wariwillcago.ui.capturaqr.capturarqr"
        android:label="@string/menu_capturarqr"
        tools:layout="@layout/fragment_capturarqr" />

    <fragment
        android:id="@+id/nav_publicidad"
        android:name="pe.edu.wariwillcago.ui.publicidad.publicidad"
        android:label="@string/menu_publicidad"
        tools:layout="@layout/fragment_publicidad" />

</navigation>